# Heptcore

./: CMakeLists.txt  README.md  run.sh
include/: core.hpp  heptcore.hpp  window.hpp
include/opengl/: buffer.hpp  framebuffer.hpp  quad.hpp  shaders.hpp  texture.hpp  vao.hpp
src/: main.cpp  window.cpp
src/opengl/: buffer.cpp  framebuffer.cpp  quad.cpp  shaders.cpp  texture.cpp  vao.cpp
